# adverity-poc

./: Makefile  README.md  alembic.ini  pyproject.toml  serve.sh
docker/: .env  docker-compose.yml
docker/db/: Dockerfile  config_set.sql
docker/python/: Dockerfile
src/app_poc/: database.py
src/app_poc/actions/: __init__.py  tv.py
src/app_poc/orm/: core.py
src/app_poc/query/: __init__.py  base.py  channel_detail.py  episode.py  tvshow.py
src/app_poc_api/: depends.py  main.py  schema.py
src/app_poc_migrate/: env.py  script.py.mako
src/app_poc_migrate/versions/: 2024-11-22_56aebff73f8c_init.py
src/app_poc_migrate/views/: public.channel_detail.sql
ts/: package-lock.json  package.json
ts/src/: App.tsx  index.css
